# forecast-tools

./: .buildinfo  .gitignore  01_example_benchmark_forecasts.ipynb  Bonus_TimeSeriesCrossValidation.ipynb  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  MANIFEST.in  README.md  _toc.yml  auto_naive_draft.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  train.csv
.github/workflows/: python-package.yml  python-publish.yml
_sources/content/: 00a_citation.md  01_benchmark_forecasts.ipynb  02a_coverage_metrics.ipynb  03_cross_validation.ipynb  04_auto_naive.ipynb
basecast/: baseline.py  metrics.py
basecast/data/: ed_ts.csv
binder/: environment.yml
content/: 00_front_page.html  00a_citation.html  00b_contribute.html  01_benchmark_forecasts.html  02_forecast_error.html  02a_coverage_metrics.html  03_cross_validation.html  04_auto_naive.html
docs/: _config.yml  _toc.yml
docs/content/: 00_front_page.md  00a_citation.md  00b_contribute.md  01_benchmark_forecasts.ipynb  02_forecast_error.ipynb  02a_coverage_metrics.ipynb  03_cross_validation.ipynb  04_auto_naive.ipynb
examples/: 01_example_benchmark_forecasts.ipynb  02_forecast_error.ipynb  04_auto_naive.ipynb  Untitled.ipynb
forecast_tools/: __init__.py  baseline.py  datasets.py  feature_engineering.py  metrics.py  model_selection.py
forecast_tools/data/: ed_ts.csv
requirements/: environment.yaml
tests/: test_datasets.py  test_metrics.py  test_model_selection.py  test_naive.py
tests/r_benchmarks/: naive_forecasts.R  naive_train.csv
