[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecast-tools"
dynamic = ["version"]
description = "Tools to support forecasting education in Python"
readme = "README.md"
license = "MIT"
keywords = ["forecasting", "time-series", "naive", "snaive", "error-metrics", "education"]
requires-python = ">=3.8"
authors = [
    { name = "Thomas Monks", email = "forecast_tools@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "joblib>=0.14.1",
    "matplotlib>=3.1.3",
    "numpy>=1.18.1",
    "pandas>=1.0.1",
    "scipy>=1.4.1",
    "seaborn>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/TomMonks/forecast-tools"
"Bug Tracker" = "https://github.com/TomMonks/forecast-tools/issues"
Documentation = "https://tommonks.github.io/forecast-tools"
Changelog = "https://github.com/TomMonks/forecast-tools/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "forecast_tools/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/forecast_tools",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

